Changed ItemBuilders way of functionning
removed DyeBuilder & PotionBuilder.